@@ -1,2 +1,2 @@
-Zope >= 2.10.0
+Zope >= 2.10.1
 GenericSetup
