@@ -1,3 +1,3 @@
-Zope >= 2.10.0
+Zope >= 2.10.1
 CMFCore
 GenericSetup
